--- a/smartline-mobile-app/composeApp/src/androidMain/res/values/strings.xml
+++ b/smartline-mobile-app/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">smartline-mobile-app</string>
+    <string name="app_name" translatable="false">Smartline</string>
 </resources>
